feature: adds remarks

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -11,7 +11,7 @@
       <h1 class="title title--medium uk-margin-bottom@l">Смартфоны iPhone</h1>
     </div>
 
-    <div class="catalog__header-bottom uk-flex uk-flex-column-reverse@s uk-padding-bottom@l uk-padding-bottom@s">
+    <div class="catalog__header-bottom uk-flex uk-flex-column-reverse@s uk-padding-bottom@l uk-padding-small-bottom@s">
 
       <div class="catalog__swiper uk-width-expand uk-margin-right@l uk-margin-top@s">
 
