--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
 
-                <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
+                <span class="product-card__price-total">97&nbsp;990&nbsp;₽</span>
               </div>
               <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
             </div>
