--- a/src/product.html
+++ b/src/product.html
@@ -75,6 +75,8 @@
                     <a href="./img/temp/product-card-2.jpg" data-alt="Image 3"></a>
                   </div>
                 </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination uk-hidden@l"></div>
               </div>
             </div>
             <span class="product__points uk-visible@l" data-uk-toggle="#popupRegistration">+ 95 баллов на бонусный
