--- a/src/return.html
+++ b/src/return.html
@@ -173,7 +173,7 @@
 
   <div class="uk-container bg-full-width uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <h2 class="title title--medium uk-margin-medium-bottom uk-text-center">Политика возврата</h2>
-    <ul class="accordion" uk-accordion="collapsible: false">
+    <ul class="accordion" uk-accordion>
       <li>
         <a class="uk-accordion-title" href="#">1. Гарантийные обязательства:</a>
         <div class="uk-accordion-content">
@@ -279,7 +279,7 @@
 
   <div class="uk-container bg-full-width">
     <h2 class="title title--medium uk-margin-medium-bottom uk-text-center">Часто задаваемые вопросы </h2>
-    <ul class="accordion" uk-accordion="collapsible: false">
+    <ul class="accordion" uk-accordion>
       <li>
         <a class="uk-accordion-title" href="#">1. Гарантийные обязательства:</a>
         <div class="uk-accordion-content">
