--- a/src/reviews.html
+++ b/src/reviews.html
@@ -23,7 +23,7 @@
         <!-- left-section -->
         <div class="uk-width-expand@l uk-margin-right">
           <div class="uk-flex uk-flex-column uk-padding-left@s uk-padding-right@s uk-hidden@l">
-            <span class="checkout__container-title">Отзывы о модели:</span>
+            <span class="checkout__container-title">Отзывы о товаре и магазине:</span>
             <select>
               <option data-image="img/temp/all-model.svg" value="8">Все модели</option>
               <option data-image="img/temp/reviews-model-1.jpg" value="1">Apple iPhone XS Max</option>
@@ -94,37 +94,61 @@
             <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
               <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
               <span class="review__name">Женя</span>
-              <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
-                знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
-                телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                жалуется, так что телефон нормальный.</p>
+              <p class="review__text review__text--plus"><span>Плюсы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur illo voluptatibus totam, error molestiae iusto molestias fugiat vel.</p>
+              <p class="review__text review__text--minus"><span>Минусы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur.</p>
+              <p class="review__text"><span>Комментарий:</span> Покупал телефон подружке на день рождения, так что как
+                он себя ведёт особо не знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка
+                не заставила ждать, телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся.
+                Ну вроде не жалуется, так что телефон нормальный.</p>
               <span class="review__date">20 сентября 2019</span>
             </li>
             <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
               <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
               <span class="review__name">Женя</span>
-              <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
-                знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
-                телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                жалуется, так что телефон нормальный.</p>
+              <p class="review__text review__text--plus"><span>Плюсы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur illo voluptatibus totam, error molestiae iusto molestias fugiat vel.</p>
+              <p class="review__text review__text--minus"><span>Минусы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur.</p>
+              <p class="review__text"><span>Комментарий:</span> Покупал телефон подружке на день рождения, так что как
+                он себя ведёт особо не знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка
+                не заставила ждать, телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся.
+                Ну вроде не жалуется, так что телефон нормальный.</p>
               <span class="review__date">20 сентября 2019</span>
             </li>
             <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
               <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
               <span class="review__name">Женя</span>
-              <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
-                знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
-                телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                жалуется, так что телефон нормальный.</p>
+              <p class="review__text review__text--plus"><span>Плюсы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur illo voluptatibus totam, error molestiae iusto molestias fugiat vel.</p>
+              <p class="review__text review__text--minus"><span>Минусы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur.</p>
+              <p class="review__text"><span>Комментарий:</span> Покупал телефон подружке на день рождения, так что как
+                он себя ведёт особо не знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка
+                не заставила ждать, телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся.
+                Ну вроде не жалуется, так что телефон нормальный.</p>
               <span class="review__date">20 сентября 2019</span>
             </li>
             <li class="review uk-flex uk-flex-column">
               <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
               <span class="review__name">Женя</span>
-              <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо не
-                знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать,
-                телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                жалуется, так что телефон нормальный.</p>
+              <p class="review__text review__text--plus"><span>Плюсы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur illo voluptatibus totam, error molestiae iusto molestias fugiat vel.</p>
+              <p class="review__text review__text--minus"><span>Минусы:</span> Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                doloribus consequatur.</p>
+              <p class="review__text"><span>Комментарий:</span> Покупал телефон подружке на день рождения, так что как
+                он себя ведёт особо не знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка
+                не заставила ждать, телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся.
+                Ну вроде не жалуется, так что телефон нормальный.</p>
               <span class="review__date">20 сентября 2019</span>
             </li>
           </ul>
@@ -134,7 +158,7 @@
         <!-- right-section -->
         <div class="uk-width-1-4@l uk-flex uk-flex-column uk-padding-left@s uk-padding-right@s">
           <div class="uk-flex uk-flex-column uk-visible@l">
-            <span class="checkout__container-title">Отзывы о модели:</span>
+            <span class="checkout__container-title">Отзывы о товаре и магазине:</span>
             <select>
               <option data-image="img/temp/all-model.svg" value="8">Все модели</option>
               <option data-image="img/temp/reviews-model-1.jpg" value="1">Apple iPhone XS Max</option>
