feature: adds eddits for markups and styles

--- a/src/account-cart.html
+++ b/src/account-cart.html
@@ -21,9 +21,10 @@
             <a href="account-cashback.html">Кешбэк</a>
           </li>
           <li>
-            <a href="account-reviews.html">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
+            <a href=""><span class="uk-visible@l">Отзывы и обратная связь</span><span class="uk-hidden@l">Задать
+                вопрос</span></a>
           </li>
-         <!--  <li class="uk-visible@l">
+          <!--  <li class="uk-visible@l">
             <a class="account__logout" href="#">Выйти
               <svg width="20" height="20" fill="#FF548C">
                 <use xlink:href="img/symbol/sprite.svg#log-out" />
