--- a/src/account-cashback.html
+++ b/src/account-cashback.html
@@ -21,7 +21,8 @@
             <a href="">Кешбэк</a>
           </li>
           <li>
-            <a href="account-reviews.html">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
+            <a href=""><span class="uk-visible@l">Отзывы и обратная связь</span><span class="uk-hidden@l">Задать
+                вопрос</span></a>
           </li>
           <!-- <li class="uk-visible@l">
             <a class="account__logout" href="#">Выйти
