--- a/src/product.html
+++ b/src/product.html
@@ -170,7 +170,8 @@
       </div>
 
       <div class="product__section">
-        <button class="btn" type="button" data-uk-toggle="target: #popupQuestion">Задать вопрос онлайн</button>
+        <button class="btn uk-visible@l" type="button" data-uk-toggle="target: #popupQuestion">Задать вопрос
+          онлайн</button>
 
         <ul class="feature uk-flex uk-flex-column@l">
           <li class="feature--green uk-flex">
@@ -391,6 +392,9 @@
         </div>
       </li>
     </ul>
+
+    <button class="btn product__faq-btn uk-hidden@l" type="button" data-uk-toggle="target: #popupQuestion">Задать вопрос
+      онлайн</button>
   </div>
 
   <div class="product__accordion uk-container bg-full-width">
@@ -487,67 +491,61 @@
                   <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
                     <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
                     <span class="review__name">Женя</span>
-                    <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо
-                      не
-                      знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила
-                      ждать,
-                      телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                      жалуется, так что телефон нормальный.</p>
+                    <p class="review__text review__text--plus"><span>Плюсы:</span> Lorem ipsum dolor sit amet
+                      consectetur
+                      adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                      doloribus consequatur illo voluptatibus totam, error molestiae iusto molestias fugiat vel.</p>
+                    <p class="review__text review__text--minus"><span>Минусы:</span> Lorem ipsum dolor sit amet
+                      consectetur
+                      adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                      doloribus consequatur.</p>
+                    <p class="review__text"><span>Комментарий:</span> Покупал телефон подружке на день рождения, так что
+                      как
+                      он себя ведёт особо не знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и
+                      доставка
+                      не заставила ждать, телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI
+                      сошёлся.
+                      Ну вроде не жалуется, так что телефон нормальный.</p>
                     <span class="review__date">20 сентября 2019</span>
                   </li>
                   <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
                     <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
                     <span class="review__name">Женя</span>
-                    <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо
-                      не
-                      знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила
-                      ждать,
-                      телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                      жалуется, так что телефон нормальный.</p>
+                    <p class="review__text review__text--plus"><span>Плюсы:</span> Lorem ipsum dolor sit amet
+                      consectetur
+                      adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                      doloribus consequatur illo voluptatibus totam, error molestiae iusto molestias fugiat vel.</p>
+                    <p class="review__text review__text--minus"><span>Минусы:</span> Lorem ipsum dolor sit amet
+                      consectetur
+                      adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                      doloribus consequatur.</p>
+                    <p class="review__text"><span>Комментарий:</span> Покупал телефон подружке на день рождения, так что
+                      как
+                      он себя ведёт особо не знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и
+                      доставка
+                      не заставила ждать, телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI
+                      сошёлся.
+                      Ну вроде не жалуется, так что телефон нормальный.</p>
                     <span class="review__date">20 сентября 2019</span>
                   </li>
                   <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
                     <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
                     <span class="review__name">Женя</span>
-                    <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо
-                      не
-                      знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила
-                      ждать,
-                      телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                      жалуется, так что телефон нормальный.</p>
-                    <span class="review__date">20 сентября 2019</span>
-                  </li>
-                  <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
-                    <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
-                    <span class="review__name">Женя</span>
-                    <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо
-                      не
-                      знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила
-                      ждать,
-                      телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                      жалуется, так что телефон нормальный.</p>
-                    <span class="review__date">20 сентября 2019</span>
-                  </li>
-                  <li class="review uk-flex uk-flex-column uk-margin-small-bottom">
-                    <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
-                    <span class="review__name">Женя</span>
-                    <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо
-                      не
-                      знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила
-                      ждать,
-                      телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                      жалуется, так что телефон нормальный.</p>
-                    <span class="review__date">20 сентября 2019</span>
-                  </li>
-                  <li class="review uk-flex uk-flex-column">
-                    <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
-                    <span class="review__name">Женя</span>
-                    <p class="review__text">Покупал телефон подружке на день рождения, так что как он себя ведёт особо
-                      не
-                      знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и доставка не заставила
-                      ждать,
-                      телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не
-                      жалуется, так что телефон нормальный.</p>
+                    <p class="review__text review__text--plus"><span>Плюсы:</span> Lorem ipsum dolor sit amet
+                      consectetur
+                      adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                      doloribus consequatur illo voluptatibus totam, error molestiae iusto molestias fugiat vel.</p>
+                    <p class="review__text review__text--minus"><span>Минусы:</span> Lorem ipsum dolor sit amet
+                      consectetur
+                      adipisicing elit. Ipsum libero deserunt rerum assumenda nihil sequi maiores voluptatum esse quo
+                      doloribus consequatur.</p>
+                    <p class="review__text"><span>Комментарий:</span> Покупал телефон подружке на день рождения, так что
+                      как
+                      он себя ведёт особо не знаю, но судя по всему всё красиво. Заказ оформили за считаные минуты, и
+                      доставка
+                      не заставила ждать, телефон привезли за 4 часа. При проверке телефон выглядел отлично, и IMEI
+                      сошёлся.
+                      Ну вроде не жалуется, так что телефон нормальный.</p>
                     <span class="review__date">20 сентября 2019</span>
                   </li>
                 </ul>
