--- a/src/account-orders.html
+++ b/src/account-orders.html
@@ -11,7 +11,7 @@
 					<li>
 						<a href="account-main.html">Главная</a>
 					</li>
-				<!-- 	<li>
+					<!-- 	<li>
 						<a href="account-cart.html">Мои товары</a>
 					</li> -->
 					<li class="active">
@@ -21,7 +21,8 @@
 						<a href="account-cashback.html">Кешбэк</a>
 					</li>
 					<li>
-						<a href="account-reviews.html">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
+						<a href=""><span class="uk-visible@l">Отзывы и обратная связь</span><span class="uk-hidden@l">Задать
+								вопрос</span></a>
 					</li>
 					<!-- <li class="uk-visible@l">
 						<a class="account__logout" href="#">Выйти
