--- a/src/account-reviews.html
+++ b/src/account-reviews.html
@@ -21,7 +21,8 @@
             <a href="account-cashback.html">Кешбэк</a>
           </li>
           <li class="active">
-            <a href="">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
+            <a href=""><span class="uk-visible@l">Отзывы и обратная связь</span><span class="uk-hidden@l">Задать
+                вопрос</span></a>
           </li>
           <!--  <li class="uk-visible@l">
             <a class="account__logout" href="#">Выйти
