--- a/src/checkout.html
+++ b/src/checkout.html
@@ -261,32 +261,39 @@
           </div> -->
 
           <div class="checkout__delivery">
-            <span class="checkout__subtitle uk-margin-small-bottom">Доставка</span>
-            <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l uk-margin-bottom">
+            <span class="checkout__subtitle uk-margin-small-bottom">Способы получения заказа</span>
+            <ul class="checkout__list-select uk-flex uk-child-width-1-2@s uk-child-width-1-3@l uk-margin-bottom">
               <li
-                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
+                class="uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div>
                   <img src="img/pic/logo/cdek-logo.jpg" width="112" height="48" alt="">
                 </div>
                 <span>CDEK</span>
               </li>
               <li
-                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
+                class="uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div>
                   <img src="img/pic/logo/pochta-logo.jpg" width="101" height="48" alt="">
                 </div>
                 <span>Почта России EMS</span>
               </li>
               <li
-                class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
+                class="active uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div>
                   <img src="img/pic/ico/pick-up-ico.svg" width="45" height="48" alt="">
                 </div>
                 <span>Самовывоз</span>
               </li>
+              <!-- <li
+                class="uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
+                <div>
+                  <img src="img/pic/ico/courier.svg" width="40" height="40" alt="">
+                </div>
+                <span>Курьером по СПб</span>
+              </li> -->
             </ul>
 
-            <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l uk-margin-bottom">
+            <!-- <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l uk-margin-bottom">
               <li
                 class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
                 <div>
@@ -308,7 +315,7 @@
                 </div>
                 <span>Курьером по СПб</span>
               </li>
-            </ul>
+            </ul> -->
 
             <p>Точку выдачи с товаром в наличии уточняйте <br>у менеджера</p>
 
