--- a/src/checkout.html
+++ b/src/checkout.html
@@ -262,60 +262,62 @@
 
           <div class="checkout__delivery">
             <span class="checkout__subtitle uk-margin-small-bottom">Способы получения заказа</span>
-            <ul class="checkout__list-select uk-flex uk-child-width-1-2@s uk-child-width-1-3@l uk-margin-bottom">
-              <li
-                class="uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div>
-                  <img src="img/pic/logo/cdek-logo.jpg" width="112" height="48" alt="">
-                </div>
-                <span>CDEK</span>
+            <ul class="checkout__list-select uk-flex uk-child-width-1-3@l uk-margin-bottom">
+              <li>
+                <input id="c21" class="uk-hidden" type="radio" name="c1" checked>
+                <label class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-1@l"
+                  for="c21">
+                  <div>
+                    <img src="img/pic/logo/cdek-logo.jpg" width="112" height="48" alt="">
+                  </div>
+                  <span>CDEK</span>
+                </label>
               </li>
-              <li
-                class="uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div>
-                  <img src="img/pic/logo/pochta-logo.jpg" width="101" height="48" alt="">
-                </div>
-                <span>Почта России EMS</span>
+              <li>
+                <input id="c31" class="uk-hidden" type="radio" name="c1">
+                <label class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-1@l"
+                  for="c31">
+                  <div>
+                    <img src="img/pic/logo/pochta-logo.jpg" width="101" height="48" alt="">
+                  </div>
+                  <span>Почта России EMS</span>
+                </label>
               </li>
-              <li
-                class="active uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div>
-                  <img src="img/pic/ico/pick-up-ico.svg" width="45" height="48" alt="">
-                </div>
-                <span>Самовывоз</span>
+              <li>
+                <input id="c41" class="uk-hidden" type="radio" name="c1">
+                <label class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-1@l"
+                  for="c41">
+                  <div class="uk-width-1-1@l">
+                    <img src="img/pic/ico/pick-up-ico.svg" width="45" height="48" alt="">
+                  </div>
+                  <span>Самовывоз</span>
+                </label>
               </li>
-              <!-- <li
-                class="uk-flex uk-flex-column uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div>
-                  <img src="img/pic/ico/courier.svg" width="40" height="40" alt="">
-                </div>
-                <span>Курьером по СПб</span>
-              </li> -->
             </ul>
 
-            <!-- <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l uk-margin-bottom">
-              <li
-                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div>
-                  <img src="img/pic/logo/cdek-logo.jpg" width="112" height="48" alt="">
-                </div>
-                <span>CDEK</span>
+            <ul class="checkout__list-select uk-flex uk-child-width-1-2@l uk-margin-bottom">
+              <li>
+                <input id="c1" class="uk-hidden" type="radio" name="c" checked>
+                <label class="uk-flex uk-flex-center@s uk-flex-middle uk-child-width-1-1@s uk-child-width-auto@l"
+                  for="c1">
+                  <div class="uk-margin-right@l">
+                    <img src="img/pic/ico/pick-up-ico.svg" width="45" height="48" alt="">
+                  </div>
+                  <span>Самовывоз</span>
+                </label>
               </li>
-              <li
-                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div>
-                  <img src="img/pic/logo/pochta-logo.jpg" width="101" height="48" alt="">
-                </div>
-                <span>Почта России EMS</span>
+
+              <li>
+                <input id="c2" class="uk-hidden" type="radio" name="c" checked>
+                <label class="uk-flex uk-flex-center@s uk-flex-middle uk-child-width-1-1@s uk-child-width-auto@l"
+                  for="c2">
+                  <div class="uk-margin-right@l">
+                    <img src="img/pic/ico/courier.svg" width="40" height="48" alt="">
+                  </div>
+                  <span>Курьером по СПб</span>
+                </label>
               </li>
-              <li
-                class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div>
-                  <img src="img/pic/ico/courier.svg" width="40" height="40" alt="">
-                </div>
-                <span>Курьером по СПб</span>
-              </li>
-            </ul> -->
+            </ul>
 
             <p>Точку выдачи с товаром в наличии уточняйте <br>у менеджера</p>
 
@@ -344,28 +346,33 @@
 
           <div class="checkout__payment">
             <span class="checkout__subtitle uk-margin-small-bottom">Оплата</span>
-            <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l"
-              uk-height-match="target: div">
-              <li
-                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div class="uk-flex uk-flex-middle">
-                  <img src="img/pic/ico/checkout-pay-1.svg" width="38" height="60" alt="">
-                </div>
-                <span>При получении</span>
+            <ul class="checkout__list-select uk-flex uk-child-width-1-3@l uk-margin-bottom">
+              <li>
+                <input id="t1" class="uk-hidden" type="radio" name="t" checked>
+                <label class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-1@l" for="t1">
+                  <div class="uk-width-1-1@l">
+                    <img src="img/pic/ico/checkout-pay-1.svg" width="38" height="60" alt="">
+                  </div>
+                  <span>При получении</span>
+                </label>
               </li>
-              <li
-                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div class="uk-flex uk-flex-middle">
-                  <img src="img/pic/ico/checkout-pay-2.svg" width="60" height="40" alt="">
-                </div>
-                <span>Картой Visa, MC, Мир</span>
+              <li>
+                <input id="t2" class="uk-hidden" type="radio" name="t" checked>
+                <label class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-1@l" for="t2">
+                  <div class="uk-width-1-1@l">
+                    <img src="img/pic/ico/checkout-pay-2.svg" width="60" height="40" alt="">
+                  </div>
+                  <span>Картой Visa, MC, Мир</span>
+                </label>
               </li>
-              <li
-                class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
-                <div class="uk-flex uk-flex-middle">
-                  <img src="img/pic/ico/checkout-pay-3.svg" width="50" height="50" alt="">
-                </div>
-                <span>Безналичный расчет</span>
+              <li>
+                <input id="t3" class="uk-hidden" type="radio" name="t" checked>
+                <label class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-1@l" for="t3">
+                  <div class="uk-width-1-1@l">
+                    <img src="img/pic/ico/checkout-pay-3.svg" width="50" height="50" alt="">
+                  </div>
+                  <span>Безналичный расчет</span>
+                </label>
               </li>
             </ul>
 
