feature: adds remarks for checkout

--- a/src/product.html
+++ b/src/product.html
@@ -138,30 +138,37 @@
                 <span>Купить в кредит</span>
                 <span>от&nbsp;1440&nbsp;&#8381 в&nbsp;месяц</span>
               </div>
+
+              <span class="product__points uk-margin-top uk-hidden@l" data-uk-toggle="#popupRegistration">+ 95 баллов на
+                бонусный
+                счет</span>
             </div>
 
             <div class="product__container product__container--present">
               <span class="checkout__container-title uk-margin-small-bottom uk-padding-left@s">Выберите 2 подарка</span>
               <ul class="product__present uk-flex">
-                <li class="checked">
-                  <div>
+                <li>
+                  <input id="v1" class="uk-hidden" type="radio" name="v" checked>
+                  <label for="v1">
                     <img src="img/temp/product-present-1.svg" width="22" height="41" alt="">
                     <span>Защитное стекло</span>
-                  </div>
+                  </label>
                 </li>
 
                 <li>
-                  <div>
+                  <input id="v2" class="uk-hidden" type="radio" name="v" checked>
+                  <label for="v2">
                     <img src="img/temp/product-present-2.svg" width="28" height="41" alt="">
                     <span>Чехол</span>
-                  </div>
+                  </label>
                 </li>
 
                 <li>
-                  <div>
+                  <input id="v3" class="uk-hidden" type="radio" name="v" checked>
+                  <label for="v3">
                     <img src="img/temp/product-present-3.svg" width="30" height="34" alt="">
                     <span>Скидка</span>
-                  </div>
+                  </label>
                 </li>
               </ul>
             </div>
