fix: changes styles and markups for main slider

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -382,7 +382,7 @@
             </div>
 
             <div class="checkout__checkbox">
-              <input class="uk-hidden" type="checkbox" id="f2" name="f2">
+              <input class="uk-hidden" type="checkbox" id="f2" name="f2" checked>
               <label for="f2">Согласен с правилами обработки персональных данных</label>
             </div>
 
