--- a/src/index.html
+++ b/src/index.html
@@ -11,26 +11,41 @@
           <p>Лучшая цена на iPhone 11 Pro и Pro Max</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
+          <img src="img/pic/bg/main-banner-mobile.jpg" alt="">
         </li>
+
         <li class="swiper-slide slide-2">
           <p>AirPods Pro Просто вошлебно. Как никогда.</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
+          <img src="img/pic/bg/main-banner-2.jpg" alt="">
         </li>
+
         <li class="swiper-slide slide-3">
           <p>Apple Watch Series 5</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
+          <img src="img/pic/bg/main-banner-3.jpg" alt="">
         </li>
+
         <li class="swiper-slide slide-4">
           <p>Новый iPad от 19 900 &#8381;</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
+          <picture>
+            <source srcset="img/pic/bg/main-banner-4-mobile.jpg" media="(max-width: 1249px)">
+            <img src="img/pic/bg/main-banner-4.jpg" alt="">
+          </picture>
         </li>
+
         <li class="swiper-slide slide-5">
           <p> Новый iPhone 11 всех цветов в наличии</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
+          <picture>
+            <source srcset="img/pic/bg/main-banner-5-mobile.jpg" media="(max-width: 1249px)">
+            <img src="img/pic/bg/main-banner-5.jpg" alt="">
+          </picture>
         </li>
       </ul>
     </div>
