feature: adds banners for catalog

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -3,12 +3,44 @@
 <body class="catalog">
   //= components/header.html
   <div class="catalog__header uk-container bg-full-width--gradient">
-    <div class="catalog__header-top uk-margin-bottom@l">
+    <div class="catalog__header-top catalog__header-top--iphone uk-margin-bottom@l">
       <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
         <li><a href="#">Главная</a></li>
         <li class="uk-active"><a href="#">Сматрфоны iPhone</a></li>
       </ul>
       <h1 class="title title--medium uk-margin-bottom@l">Смартфоны iPhone</h1>
+    </div>
+
+    <div class="catalog__header-top catalog__header-top--ipad uk-margin-bottom@l">
+      <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
+        <li><a href="#">Главная</a></li>
+        <li class="uk-active"><a href="#">Сматрфоны iPhone</a></li>
+      </ul>
+      <h1 class="title title--medium uk-margin-bottom@l">Планшеты iPad</h1>
+    </div>
+
+    <div class="catalog__header-top catalog__header-top--macbook uk-margin-bottom@l">
+      <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
+        <li><a href="#">Главная</a></li>
+        <li class="uk-active"><a href="#">Сматрфоны iPhone</a></li>
+      </ul>
+      <h1 class="title title--medium uk-margin-bottom@l">Ноутбуки MacBook</h1>
+    </div>
+
+    <div class="catalog__header-top catalog__header-top--iwatch uk-margin-bottom@l">
+      <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
+        <li><a href="#">Главная</a></li>
+        <li class="uk-active"><a href="#">Сматрфоны iPhone</a></li>
+      </ul>
+      <h1 class="title title--medium uk-margin-bottom@l">Умные часы Apple Watch</h1>
+    </div>
+
+    <div class="catalog__header-top catalog__header-top--accessories uk-margin-bottom@l">
+      <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
+        <li><a href="#">Главная</a></li>
+        <li class="uk-active"><a href="#">Сматрфоны iPhone</a></li>
+      </ul>
+      <h1 class="title title--medium uk-margin-bottom@l">Аксессуары</h1>
     </div>
 
     <div class="catalog__header-bottom uk-flex uk-flex-column-reverse@s uk-padding-bottom@l uk-padding-small-bottom@s">
