--- a/src/product.html
+++ b/src/product.html
@@ -701,7 +701,7 @@
       <li class="product__description">
         <a class="uk-accordion-title" href="#">Описание товара</a>
         <div class="uk-accordion-content">
-          <!-- Тут будет лендос -->
+          //= components/descriptions/description--iphone11pro.html
         </div>
       </li>
 
