feature: adds steps for credits

--- a/src/credit.html
+++ b/src/credit.html
@@ -64,18 +64,18 @@
             </li>
 
             <li class="uk-flex uk-flex-column@s uk-flex-between">
-              <p>Выберите на сайте нужный вам товар и нажмите “Расчитать кредит”</p>
-              <img src="img/pic/bg/credit-step1.jpg" width="220" height="280" alt="">
+              <p>Кредитный специалист заполнит с вами короткую анкету по телефону</p>
+              <img src="img/pic/bg/credit-step2.jpg" width="220" height="280" alt="">
             </li>
 
             <li class="uk-flex uk-flex-column@s uk-flex-between">
-              <p>Выберите на сайте нужный вам товар и нажмите “Расчитать кредит”</p>
-              <img src="img/pic/bg/credit-step1.jpg" width="220" height="280" alt="">
+              <p>Ожидайте решения от банков. В среднем это занимает 30 минут.</p>
+              <img src="img/pic/bg/credit-step3.jpg" width="220" height="280" alt="">
             </li>
 
             <li class="uk-flex uk-flex-column@s uk-flex-between">
-              <p>Выберите на сайте нужный вам товар и нажмите “Расчитать кредит”</p>
-              <img src="img/pic/bg/credit-step1.jpg" width="220" height="280" alt="">
+              <p>Ваш заказ доставят вам на дом и останется лишь подписать бумаги.</p>
+              <img src="img/pic/bg/credit-step4.jpg" width="220" height="280" alt="">
             </li>
           </ul>
         </div>
