feature: add eddits

--- a/src/product.html
+++ b/src/product.html
@@ -405,7 +405,7 @@
   </div>
 
   <div class="product__accordion uk-container bg-full-width">
-    <ul class="accordion" uk-accordion="collapsible: true; duration: 0;">
+    <ul class="accordion accordion--scroll" uk-accordion="collapsible: true; duration: 0;">
       <!-- <li class="product__main-atributes">
         <a class="uk-accordion-title" href="#">Основные характеристики</a>
         <div class="uk-accordion-content">
