feature: adds seo-features

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -617,6 +617,7 @@
     </div>
   </div>
 
+  //= components/seo-features.html
   //= components/seo.html
   //= components/seo-msk.html
   //= components/subscribe.html
