feature: adds mobile filter and adds arrow for mobile accordion

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -106,7 +106,7 @@
             <option value="2">Новинки</option>
           </select>
         </div>
-        <button class="btn catalog__open-filter uk-hidden@l">Фильтр</button>
+        <button class="btn catalog__open-filter uk-hidden@l" data-uk-toggle="target: #popupFilter">Фильтр</button>
       </div>
     </div>
   </div>
